docs: clarify `@for` phrasing for NG8115
Co-authored-by: Matthieu Riegler <kyro38@gmail.com>

--- a/adev/src/content/reference/extended-diagnostics/NG8115.md
+++ b/adev/src/content/reference/extended-diagnostics/NG8115.md
@@ -17,7 +17,7 @@ class Items {
 
 ## What's wrong with that?
 
-`@for` needs to uniquely identify items in the iterable to correctly perform DOM updates when items in the iterable are reordered, new items are added, or existing items are removed. 
+`@for` blocks need to uniquely identify items in the iterable to correctly perform DOM updates when items in the iterable are reordered, new items are added, or existing items are removed. 
 Passing just the function name to the track function without invoking the function will make the `@for` loop recreate the list everytime. The function need to be called.
 
 ## What should I do instead?
