docs: change phrasing of doc NG8115
Co-authored-by: Matthieu Riegler <kyro38@gmail.com>

--- a/adev/src/content/reference/extended-diagnostics/NG8115.md
+++ b/adev/src/content/reference/extended-diagnostics/NG8115.md
@@ -1,6 +1,6 @@
 # Uninvoked Track Function
 
-This diagnostic detects when a track function is not called in `@for` blocks.
+This diagnostic detects when a track function is not invoked in `@for` blocks.
 
 <docs-code language="typescript">
 
