docs: clarify `@for block` NG8115
Co-authored-by: Matthieu Riegler <kyro38@gmail.com>

--- a/adev/src/content/reference/extended-diagnostics/NG8115.md
+++ b/adev/src/content/reference/extended-diagnostics/NG8115.md
@@ -22,7 +22,7 @@ Passing just the function name to the track function without invoking the functi
 
 ## What should I do instead?
 
-Ensure to invoke the track function when you use it in a `@for` to execute the function so the loop can uniquely identify items.
+Ensure to invoke the track function when you use it in a `@for` block to execute the function so the loop can uniquely identify items.
 
 <docs-code language="typescript">
 
